  * Display author, revision information, and links to previous/next revision
    when viewing an old version of a topic.
  * Support the #switch parser functions.  Usage:
    "{{#switch: value | case1 = result | case2 = result | default}}".
  * Support the #ifexist parser function.  Usage:
    "{{#ifexist: topic | exists | does not exist}}".
  * Special:VirtualWiki optimizations.  Site name, meta description and logo
    can now allow be customized per-virtual wiki.
  * Use a new algorithm for image resizing to greatly improve image quality.
  * Allow use of HTML heading tags (<h1>, <h2>, etc).
  * Use the database rather than the search engine to generate results for the
    Special:LinkTo page and add pagination and sorting to Special:LinkTo.
  * SEO optimizations: return HTTP 404 when requesting a page for a topic that
    does not exist, return HTTP 500 for error pages, and specify the
    "canonical" meta tag for redirected topics.
  * Add support for the Caché database (dprekker).
  * Add an option to treat capitalized and lowercase topic names as a single
    record.  For example, "Topic" and "topic" would refer to the same topic.
  * Display pagination options when viewing topic categories.
  * Reduce the amount of parsing the must be done when importing topics in
    order to improve performance.
  * Use a separate "resized" folder for resized images in order to more clearly
    separate original uploads from resized images.
  * Remove ability to automatically upgrade from versions prior to 0.8.0.
  * Remove unused/obsolete Javascript and namespace the remaining code.
  * Organize uploaded images by virtual wiki on the file system.
  * Add several indexes to the database to improve query performance.
  * Persist configuration information to a new jam_configuration table in
    addition to the jamwiki.properties file.  This table will be used in future
    releases.
  * Upgrade to Spring Framework 3.0.5.RELEASE.