@@ -1,0 +1,1 @@
+<p>this content <b>should</b> be shown when the template is used.</p>
