@@ -1,0 +1,2 @@
+<!-- test functionality for templates that contain an <onlyinclude> section -->
+{{Onlyinclude}}
