@@ -1,0 +1,6 @@
+<!-- test onlyinclude -->
+this content should not be shown when the template is used.
+
+<onlyinclude>this content '''should''' be shown when the template is used.</onlyinclude>
+
+this content should also not be shown when the template is used.
